--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@ body {
 }
 
 main {
-  background: url(images/BACKGROUND.svg);
-  width: 375px;
-  height: 812px;
+  background: url(images/BACKGROUND.svg) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vh;
 }
 
 .container {
